tests/errors/const_02.py
from ltypes import i32, Const

def f():
    x: Const[i32] = 4
    x = 5

f()
